DEV-1081 Ease running Docker with custom ops
Custom operations can now be included in the user's JAR file and put
in a special folder to be added to the classpath and referenced with
no further modification to the Docker container or code running in it.