@@ -1,6 +1,6 @@
 #!/bin/bash
 
-/usr/bin/java ${JAVA_OPTS} --illegal-access=permit -jar /usr/share/hartwig/bootstrap.jar "$@"
+/usr/bin/java ${JAVA_OPTS} -cp /usr/share/hartwig/bootstrap.jar:/usr/share/hartwig/lib/*:/usr/share/thirdpartyjars/* com.hartwig.batch.BatchDispatcher "$@"
 status=$?
 if [ ${status} -ne 0 ]; then
   echo "Failed to start bootstrap: $status"
